fix the extra space

--- a/page/sass/press.scss
+++ b/page/sass/press.scss
@@ -1,6 +1,11 @@
 .section.press{
+
     padding-top: $padding-between-sections;   
     margin-top: $padding-between-sections;
+    @media (max-width: $screen-sm) {
+        margin-top: 0;
+        padding-bottom: 0 
+    }
     border: 0;  
     ul{
         display: inline-block;
